# happiness-meter

./: .gitignore  README.md  README.rst  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/: auto-assign.yml  pull_request_template.md
.github/workflows/: auto-assign.yml
docker/db/: postgres.init.sql
docker/pgadmin/: servers.json
docker/static/: default.conf
docs/: models.md  spec.md  spec.rst
happymeter/: asgi.py  settings.py  urls.py  wsgi.py
members/: admin.py  apps.py  models.py  resources.py  routes.py  serializers.py  services.py
members/fixtures/: members.json  teams.json
members/migrations/: 0001_initial.py  0002_members_ordering.py
reports/: admin.py  apps.py  models.py  resources.py  routes.py  serializers.py  services.py  utils.py
reports/management/commands/: cleanreports.py  seedreports.py
reports/migrations/: 0001_initial.py
static/: index.html
